--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Advent_of_Code)
 
+set(CXX_STANDARD 14)
+
 add_subdirectory(processing)
 add_subdirectory(2015)
 add_subdirectory(2024)
